PROJECT(world)
SET( prefix ${ROOT_PATH}/src/arcpro-world )
SET(sources
	Accounts/AccountMgr.cpp
	Accounts/RBAC.cpp
	Achievements/AchievementMgr.cpp
	Addons/AddonMgr.cpp
	AI/CreatureAI.cpp
	AI/CreatureAIRegistry.cpp
	AI/CreatureAISelector.cpp
	AI/CoreAI/CombatAI.cpp
	AI/CoreAI/GameObjectAI.cpp
	AI/CoreAI/GuardAI.cpp
	AI/CoreAI/PassiveAI.cpp
	AI/CoreAI/PetAI.cpp
	AI/CoreAI/ReactorAI.cpp
	AI/CoreAI/TotemAI.cpp
	AI/CoreAI/UnitAI.cpp
	AI/ScriptedAI/ScriptedCreature.cpp
	AI/ScriptedAI/ScriptedEscortAI.cpp
	AI/ScriptedAI/ScriptedFollowerAI.cpp
	AI/SmartScripts/SmartAI.cpp
	AI/SmartScripts/SmartScript.cpp
	AI/SmartScripts/SmartScriptMgr.cpp
	AuctionHouse/AuctionHouseMgr.cpp
	Battlefield/Battlefield.cpp
	Battlefield/BattlefieldMgr.cpp
	Battlefield/Zones/BattlefieldWG.cpp
	Battlegrounds/ArenaTeam.cpp
	Battlegrounds/ArenaTeamMgr.cpp
	Battlegrounds/Battleground.cpp
	Battlegrounds/BattlegroundMgr.cpp
	Battlegrounds/BattlegroundQueue.cpp
	Battlegrounds/Zones/BattlegroundAB.cpp
	Battlegrounds/Zones/BattlegroundAV.cpp
	Battlegrounds/Zones/BattlegroundBE.cpp
	Battlegrounds/Zones/BattlegroundBFG.cpp
	Battlegrounds/Zones/BattlegroundDS.cpp
	Battlegrounds/Zones/BattlegroundEY.cpp
	Battlegrounds/Zones/BattlegroundIC.cpp
	Battlegrounds/Zones/BattlegroundNA.cpp
	Battlegrounds/Zones/BattlegroundRL.cpp
	Battlegrounds/Zones/BattlegroundRV.cpp
	Battlegrounds/Zones/BattlegroundSA.cpp
	Battlegrounds/Zones/BattlegroundTP.cpp
	Battlegrounds/Zones/BattlegroundWS.cpp
	Calendar/CalendarMgr.cpp
	Chat/Chat.cpp
	Chat/ChatLink.cpp
	Chat/Channels/Channel.cpp
	Chat/Channels/ChannelMgr.cpp
	Combat/HostileRefManager.cpp
	Combat/ThreatManager.cpp
	Conditions/ConditionMgr.cpp
	Conditions/DisableMgr.cpp
	DataStores/DB2Stores.cpp
	DataStores/DB2Utility.cpp
	DataStores/DBCStores.cpp
	#DBC/DBCStores.cpp
	DungeonFinding/LFG.cpp
	DungeonFinding/LFGGroupData.cpp
	DungeonFinding/LFGMgr.cpp
	DungeonFinding/LFGPlayerdata.cpp
	DungeonFinding/LFGQueue.cpp
	DungeonFinding/LFGScripts.cpp
	Entities/Summons/CompanionSummon.cpp
	Entities/Summons/GuardianSummon.cpp
	Entities/Summons/PossessedSummon.cpp
	Entities/Summons/Summon.cpp
	Entities/Summons/TotemSummon.cpp
	Entities/Summons/WildSummon.cpp
	Entities/Corpse/Corpse.cpp
	Entities/Creature/Creature.cpp
	Entities/Creature/CreatureGroups.cpp
	Entities/Creature/GossipDef.cpp
	Entities/Creature/TemporarySummon.cpp
	Entities/DynamicObject/DynamicObject.cpp
	Entities/GameObject/GameObject.cpp
	Entities/Item/Item.cpp
	Entities/Item/ItemEnchantmentMgr.cpp
	Entities/Item/Container/Bag.cpp
	Entities/Object/Object.cpp
	Entities/Object/ObjectPosSelector.cpp
	Entities/Object/Updates/UpdateData.cpp
	Entities/Object/Updates/UpdateFieldFlags.cpp
	Entities/Pet/Pet.cpp
	Entities/Player/Player.cpp
	Entities/Player/SocialMgr.cpp
	Entities/Totem/Totem.cpp
	Entities/Transport/Transport.cpp
	Entities/Unit/StatSystem.cpp
	Entities/Unit/Unit.cpp
	Entities/Vehicle/Vehicle.cpp
	Events/GameEventMgr.cpp
	Globals/Objectaccessor.cpp
	Globals/ObjectMgr.cpp
	Grids/GridStates.cpp
	Grids/ObjectGridLoader.cpp
	Grids/Notifiers/GridNotifiers.cpp
	Groups/Group.cpp
	Groups/GroupMgr.cpp
	Groups/GroupReference.cpp
	Guilds/Guild.cpp
	Guilds/GuildFinderMgr.cpp
	Guilds/GuildMgr.cpp
	Handlers/AddonHandler.cpp
	Handlers/ArenaTeamHandler.cpp
	Handlers/AuctionHouseHandler.cpp
	Handlers/AuthHandler.cpp
	Handlers/BattlefieldHandler.cpp
	Handlers/BattleGroundHandler.cpp
	Handlers/CalendarHandler.cpp
	Handlers/ChannelHandler.cpp
	Handlers/CharacterHandler.cpp
	Handlers/ChatHandler.cpp
	Handlers/CombatHandler.cpp
	Handlers/DuelHandler.cpp
	Handlers/GroupHandler.cpp
	Handlers/GuildFinderHandler.cpp
	Handlers/GuildHandler.cpp
	Handlers/ItemHandler.cpp
	Handlers/LFGHandler.cpp
	Handlers/LootHandler.cpp
	Handlers/MailHandler.cpp
	Handlers/MiscHandler.cpp
	Handlers/MovementHandler.cpp
	Handlers/NPCHandler.cpp
	Handlers/PetHandler.cpp
	Handlers/PetitionsHandler.cpp
	Handlers/QueryHandler.cpp
	Handlers/QuestHandler.cpp
	Handlers/ReferAFriendHandler.cpp
	Handlers/SkillHandler.cpp
	Handlers/SpellHandler.cpp
	Handlers/TaxiHandler.cpp
	Handlers/TicketHandler.cpp
	Handlers/TradeHandler.cpp
	Handlers/VehicleHandler.cpp
	Handlers/VoiceChatHandler.cpp
	Handlers/VoidStorageHandler.cpp
	Instances/InstanceSaveMgr.cpp
	Instances/InstanceScript.cpp
	Loot/LootMgr.cpp
	Mails/Mail.cpp
	Maps/Map.cpp
	Maps/MapInstanced.cpp
	Maps/MapManager.cpp
	Maps/MapUpdater.cpp
	Maps/PhaseMgr.cpp
	Movement/FollowerReference.cpp
	Movement/MotionMaster.cpp
	Movement/MovementGenerator.cpp
	Movement/MovementStructures.cpp
	Movement/PathGenerator.cpp
	Movement/MovementGenerators/ConfusedMovementGenerator.cpp
	Movement/MovementGenerators/FleeingMovementGenerator.cpp
	Movement/MovementGenerators/HomeMovementGenerator.cpp
	Movement/MovementGenerators/IdleMovementGenerator.cpp
	Movement/MovementGenerators/PointMovementGenerator.cpp
	Movement/MovementGenerators/RandomMovementGenerator.cpp
	Movement/MovementGenerators/TargetedMovementGenerator.cpp
	Movement/MovementGenerators/WaypointMovementGenerator.cpp
	Movement/Spline/MovementPacketBuilder.cpp
	Movement/Spline/MovementUtil.cpp
	Movement/Spline/MoveSpline.cpp
	Movement/Spline/MoveSplineInit.cpp
	Movement/Spline/Spline.cpp
	Movement/Waypoints/WaypointManager.cpp
	OutdoorPvP/OutdoorPvP.cpp
	OutdoorPvP/OutdoorPvPMgr.cpp
	Pools/PoolMgr.cpp
	PrecompiledHeaders/gamePCH.cpp
	Quests/QuestDef.cpp
	Reputation/ReputationMgr.cpp
	Scripting/MapScripts.cpp
	Scripting/ScriptLoader.cpp
	Scripting/ScriptMgr.cpp
	Scripting/ScriptSystem.cpp
	Server/WorldPacket.cpp
	Server/WorldSession.cpp
	Server/WorldSocket.cpp
	Server/WorldSocketMgr.cpp
	Server/Protocol/Opcodes.cpp
	Server/Protocol/Packetlog.cpp
	Skills/Skilldiscovery.cpp
	Skills/SkillExtraItems.cpp
	Spells/Spell.cpp
	Spells/SpellEffects.cpp
	Spells/SpellInfo.cpp
	Spells/SpellMgr.cpp
	Spells/SpellScript.cpp
	Spells/Auras/SpellAuraEffects.cpp
	Spells/Auras/SpellAuras.cpp
	Texts/CreatureTextMgr.cpp
	Tickets/TicketMgr.cpp
	Tools/CharacterDatabaseCleaner.cpp
	Tools/PlayerDump.cpp
	Warden/Warden.cpp
	Warden/WardenCheckMgr.cpp
	Warden/WardenMac.cpp
	Warden/WardenWin.cpp
	Weather/Weather.cpp
	Weather/WeatherMgr.cpp
	World/World.cpp
 )

SET( headers
	Accounts/AccountMgr.h
	Accounts/RBAC.h
	Achievements/AchievementMgr.h
	Addons/AddonMgr.h
	AI/CreatureAI.h
	AI/CreatureAIFactory.h
	AI/CreatureAIImpl.h
	AI/CreatureAIRegistry.h
	AI/CreatureAISelector.h
	AI/CoreAI/CombatAI.h
	AI/CoreAI/GameObjectAI.h
	AI/CoreAI/GuardAI.h
	AI/CoreAI/PassiveAI.h
	AI/CoreAI/PetAI.h
	AI/CoreAI/ReactorAI.h
	AI/CoreAI/TotemAI.h
	AI/CoreAI/UnitAI.h
	AI/ScriptedAI/ScriptedCreature.h
	AI/ScriptedAI/ScriptedEscortAI.h
	AI/ScriptedAI/ScriptedFollowerAI.h
	AI/ScriptedAI/ScriptedGossip.h
	AI/SmartScripts/SmartAI.h
	AI/SmartScripts/SmartScript.h
	AI/SmartScripts/SmartScriptMgr.h
	AuctionHouse/AuctionHouseMgr.h
	Battlefield/Battlefield.h
	Battlefield/BattlefieldMgr.h
	Battlefield/Zones/BattlefieldWG.h
	Battlegrounds/ArenaTeam.h
	Battlegrounds/ArenaTeamMgr.h
	Battlegrounds/Battleground.h
	Battlegrounds/BattlegroundMgr.h
	Battlegrounds/BattlegroundQueue.h
	Battlegrounds/Zones/BattlegroundAB.h
	Battlegrounds/Zones/BattlegroundAV.h
	Battlegrounds/Zones/BattlegroundBE.h
	Battlegrounds/Zones/BattlegroundBFG.h
	Battlegrounds/Zones/BattlegroundDS.h
	Battlegrounds/Zones/BattlegroundEY.h
	Battlegrounds/Zones/BattlegroundIC.h
	Battlegrounds/Zones/BattlegroundNA.h
	Battlegrounds/Zones/BattlegroundRL.h
	Battlegrounds/Zones/BattlegroundRV.h
	Battlegrounds/Zones/BattlegroundSA.h
	Battlegrounds/Zones/BattlegroundTP.h
	Battlegrounds/Zones/BattlegroundWS.h
	Calendar/CalendarMgr.h
	Chat/Chat.h
	Chat/ChatLink.h
	Chat/Channels/Channel.h
	Chat/Channels/ChannelMgr.h
	Combat/HostileRefManager.h
	Combat/ThreatManager.h
	Combat/UnitEvents.h
	Conditions/ConditionMgr.h
	Conditions/DisableMgr.h
	DataStores/DB2fmt.h
	DataStores/DB2Stores.h
	DataStores/DB2Structure.h
	DataStores/DB2Utility.h
	DataStores/DBCEnums.h
	DataStores/DBCfmt.h
	DataStores/DBCStores.h
	DataStores/DBCstructure.h
	#DBC/DBCStores.h
	DungeonFinding/LFG.h
	DungeonFinding/LFGGroupData.h
	DungeonFinding/LFGMgr.h
	DungeonFinding/LFGPlayerData.h
	DungeonFinding/LFGQueue.h
	DungeonFinding/LFGScripts.h
	Entities/Summons/CompanionSummon.h
	Entities/Summons/GuardianSummon.h
	Entities/Summons/PossessedSummon.h
	Entities/Summons/Summon.h
	Entities/Summons/TotemSummon.h
	Entities/Summons/WildSummon.h
	Entities/Corpse/Corpse.h
	Entities/Creature/Creature.h
	Entities/Creature/CreatureGroups.h
	Entities/Creature/GossipDef.h
	Entities/Creature/TemporarySummon.h
	Entities/DynamicObject/DynamicObject.h
	Entities/GameObject/GameObject.h
	Entities/Item/Item.h
	Entities/Item/ItemEnchantmentMgr.h
	Entities/Item/ItemPrototype.h
	Entities/Item/Container/Bag.h
	Entities/Object/Object.h
	Entities/Object/ObjectDefines.h
	Entities/Object/ObjectPosSelector.h
	Entities/Object/Updates/UpdateData.h
	Entities/Object/Updates/UpdateFieldFlags.h
	Entities/Object/Updates/UpdateFields.h
	Entities/Object/Updates/UpdateMask.h
	Entities/Pet/Pet.h
	Entities/Pet/PetDefines.h
	Entities/Player/Player.h
	Entities/Player/SocialMgr.h
	Entities/Totem/Totem.h
	Entities/Transport/Transport.h
	Entities/Unit/Unit.h
	Entities/Vehicle/Vehicle.h
	Entities/Vehicle/VehicleDefines.h
	Events/GameEventMgr.h
	Globals/ObjectAccessor.h
	Globals/ObjectMgr.h
	Grids/Grid.h
	Grids/GridDefines.h
	Grids/GridLoader.h
	Grids/GridReference.h
	Grids/GridRefManager.h
	Grids/GridStates.h
	Grids/NGrid.h
	Grids/ObjectGridLoader.h
	Grids/Cells/Cell.h
	Grids/Cells/CellImpl.h
	Grids/Notifiers/GridNotifiers.h
	Grids/Notifiers/GridNotifiersImpl.h
	Groups/Group.h
	Groups/GroupMgr.h
	Groups/GroupReference.h
	Groups/GroupRefManager.h
	Guilds/Guild.h
	Guilds/GuildFinderMgr.h
	Guilds/GuildMgr.h
	Handlers/AddonHandler.h
	Handlers/NPCHandler.h
	Instances/InstanceSaveMgr.h
	Instances/InstanceScript.h
	Loot/LootMgr.h
	Mails/Mail.h
	Maps/Map.h
	Maps/MapInstanced.h
	Maps/MapManager.h
	Maps/MapReference.h
	Maps/MapRefManager.h
	Maps/MapUpdater.h
	Maps/PhaseMgr.h
	Maps/ZoneScript.h
	Miscellaneous/Formulas.h
	Miscellaneous/Language.h
	Miscellaneous/SharedDefines.h
	Movement/FollowerReference.h
	Movement/FollowerRefManager.h
	Movement/MotionMaster.h
	Movement/MovementGenerator.h
	Movement/MovementGeneratorImpl.h
	Movement/MovementStructures.h
	Movement/PathGenerator.h
	Movement/MovementGenerators/ConfusedMovementGenerator.h
	Movement/MovementGenerators/FleeingMovementGenerator.h
	Movement/MovementGenerators/HomeMovementGenerator.h
	Movement/MovementGenerators/IdleMovementGenerator.h
	Movement/MovementGenerators/PointMovementGenerator.h
	Movement/MovementGenerators/RandomMovementGenerator.h
	Movement/MovementGenerators/TargetedMovementGenerator.h
	Movement/MovementGenerators/WaypointMovementGenerator.h
	Movement/Spline/MovementPacketBuilder.h
	Movement/Spline/MovementTypedefs.h
	Movement/Spline/MoveSpline.h
	Movement/Spline/MoveSplineFlag.h
	Movement/Spline/MoveSplineInit.h
	Movement/Spline/MoveSplineInitArgs.h
	Movement/Spline/Spline.h
	Movement/Spline/SplineImpl.h
	Movement/Waypoints/Path.h
	Movement/Waypoints/WaypointManager.h
	OutdoorPvP/OutdoorPvP.h
	OutdoorPvP/OutdoorPvPMgr.h
	Pools/PoolMgr.h
	PrecompiledHeaders/gamePCH.h
	Quests/QuestDef.h
	Reputation/ReputationMgr.h
	Scripting/ScriptLoader.h
	Scripting/ScriptMgr.h
	Scripting/ScriptSystem.h
	Server/WorldPacket.h
	Server/WorldSession.h
	Server/WorldSocket.h
	Server/WorldSocketAcceptor.h
	Server/WorldSocketMgr.h
	Server/Protocol/Opcodes.h
	Server/Protocol/PacketLog.h
	Skills/SkillDiscovery.h
	Skills/SkillExtraItems.h
	Spells/Spell.h
	Spells/SpellInfo.h
	Spells/SpellMgr.h
	Spells/SpellScript.h
	Spells/Auras/SpellauraDefines.h
	Spells/Auras/SpellAuraEffects.h
	Spells/Auras/SpellAuras.h
	Texts/CreatureTextMgr.h
	Tickets/TicketMgr.h
	Tools/CharacterDatabaseCleaner.h
	Tools/PlayerDump.h
	Warden/Warden.h
	Warden/WardenCheckMgr.h
	Warden/WardenMac.h
	Warden/Wardenwin.h
	Warden/Modules/WardenModuleMac.h
	Warden/Modules/WardenModuleWin.h
	Weather/Weather.h
	Weather/WeatherMgr.h
	World/World.h
)
	

foreach(src IN ITEMS ${sources} )
  SET( SRCS ${SRCS} ${prefix}/${src} )
endforeach(src)
foreach(src IN ITEMS ${headers} )
  SET( HEADERS ${HEADERS} ${prefix}/${src} )
endforeach(src)

include(PCHSupport)
include_directories( ${GLOBAL_INCLUDE_DIRS} )
link_directories( ${DEPENDENCY_LIBS} ${EXTRA_LIBS_PATH} )

add_executable( ${PROJECT_NAME} ${SRCS} ${HEADERS} )

IF( CMAKE_GENERATOR MATCHES Visual*)
	ADD_NATIVE_PRECOMPILED_HEADER(${PROJECT_NAME} StdAfx.h ${prefix}/StdAfx.cpp)
ENDIF()
set_target_properties(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS TRUE)

add_dependencies( ${PROJECT_NAME} shared g3dlite vmaplib detour recast)
target_link_libraries( ${PROJECT_NAME} shared  g3dlite vmaplib detour recast ${PCRE_LIBRARIES} )
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION .)





